updated deploy scripts

--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -581,24 +581,14 @@
     <Content Include="Content\themes\jMetro\images\ui-icons_d4d4d4_0.png" />
     <Content Include="Content\themes\jMetro\images\ui-icons_ffffff_0.png" />
     <Content Include="Content\themes\jMetro\jquery-ui.css" />
-    <Content Include="Deploy\app_offline.htm" />
-    <Content Include="Deploy\check-list.txt" />
-    <Content Include="Deploy\deploy-plan.txt" />
+    <Content Include="Deploy\Scripts\app_offline.htm" />
+    <Content Include="Deploy\Scripts\check-list.txt" />
+    <Content Include="Deploy\Scripts\deploy-plan.txt" />
     <Content Include="Deploy\restore-previous-release.sql" />
-    <Content Include="Deploy\Scripts\setup-rights.sql" />
+    <Content Include="Deploy\Scripts\Setup\setup-rights.sql" />
     <Content Include="Deploy\Scripts\Setup\create-sp-for-backup-db.sql" />
     <Content Include="Deploy\Scripts\Setup\create-sp-restore-db.sql" />
     <Content Include="Deploy\Scripts\Setup\init-db.ps1" />
-    <Content Include="Deploy\Scripts\Setup\set-initial-data.sql" />
-    <Content Include="Deploy\Scripts\update-2.sql" />
-    <Content Include="Deploy\Scripts\update-0.sql" />
-    <Content Include="Deploy\Scripts\update-1.sql" />
-    <Content Include="Deploy\Scripts\update-4.sql" />
-    <Content Include="Deploy\Scripts\update-5.sql" />
-    <Content Include="Deploy\Scripts\update-6.sql" />
-    <Content Include="Deploy\Scripts\update-7.sql" />
-    <Content Include="Deploy\Scripts\update-8.sql" />
-    <Content Include="Deploy\Scripts\update-9.sql" />
     <Content Include="Scripts\app\AirWaybill\Columns.js" />
     <Content Include="Scripts\app\AirWaybill\Grid.js" />
     <Content Include="Scripts\app\Alicargo.js" />
@@ -625,15 +615,15 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="App_Code\Helpers.cshtml" />
-    <Content Include="Deploy\Scripts\backup-db.ps1" />
+    <Content Include="Deploy\Scripts\Setup\backup-db.ps1" />
     <Content Include="Deploy\pre-deploy.ps1" />
-    <Content Include="Deploy\server-release.ps1" />
+    <Content Include="Deploy\Scripts\server-release.ps1" />
     <Content Include="Deploy\Scripts\prepare-release-db.ps1" />
-    <Content Include="Deploy\server-release-dev.ps1" />
+    <Content Include="Deploy\Scripts\server-release-dev.ps1" />
     <None Include="Deploy\Scripts\prepare-iis.ps1" />
     <Content Include="Deploy\SqlSchemaCompare.scmp" />
-    <Content Include="Deploy\Scripts\run-updates.ps1" />
-    <Content Include="Deploy\Scripts\run-updates-local.ps1" />
+    <Content Include="Deploy\run-updates.ps1" />
+    <Content Include="Deploy\run-updates-local.ps1" />
     <None Include="Properties\PublishProfiles\Dev.pubxml" />
     <None Include="Properties\PublishProfiles\Release.pubxml" />
     <None Include="Scripts\jQuery\jquery-2.1.0.intellisense.js" />
