--- a/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
+++ b/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Helpers\OrderHelper.cs" />
     <Compile Include="Helpers\OrderType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Application\IAwbFileRepository.cs" />
     <Compile Include="Resources\ApplicationFileType.Designer.cs">
       <DependentUpon>ApplicationFileType.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -150,7 +151,7 @@
     <Compile Include="Repositories\Application\IApplicationFileRepository.cs" />
     <Compile Include="Repositories\Application\IApplicationRepository.cs" />
     <Compile Include="Repositories\Application\IApplicationEditor.cs" />
-    <Compile Include="Repositories\IAWBRepository.cs" />
+    <Compile Include="Repositories\Application\IAwbRepository.cs" />
     <Compile Include="Repositories\User\IBrokerRepository.cs" />
     <Compile Include="Repositories\ICalculationRepository.cs" />
     <Compile Include="Repositories\User\ICarrierRepository.cs" />
