--- a/Alicargo.DataAccess/Alicargo.DataAccess.csproj
+++ b/Alicargo.DataAccess/Alicargo.DataAccess.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Helpers\TableParameter.cs" />
     <Compile Include="Helpers\UserHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Application\AwbFileRepository.cs" />
     <Compile Include="Repositories\EventEmailRecipient.cs" />
     <Compile Include="Repositories\EventRepository.cs" />
     <Compile Include="Repositories\Application\ApplicationFileRepository.cs" />
@@ -90,7 +91,7 @@
     <Compile Include="Repositories\User\ClientBalanceRepository.cs" />
     <Compile Include="Repositories\User\ClientRepository.cs" />
     <Compile Include="Repositories\CountryRepository.cs" />
-    <Compile Include="Repositories\AwbRepository.cs" />
+    <Compile Include="Repositories\Application\AwbRepository.cs" />
     <Compile Include="Repositories\User\ClientFileRepository.cs" />
     <Compile Include="Repositories\EmailMessageRepository.cs" />
     <Compile Include="Repositories\TemplateRepository.cs" />
