--- a/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
+++ b/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
@@ -128,6 +128,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Controllers\AdminAwbControllerTests.cs" />
     <Compile Include="Controllers\AirWaybillControllerTests.cs" />
     <Compile Include="Controllers\Application\ApplicationControllerTests.cs" />
     <Compile Include="Controllers\Application\ClientApplicatonControllerTests.cs" />
