--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Controllers\Application\ApplicationListController.cs" />
     <Compile Include="Controllers\Application\ApplicationUpdateController.cs" />
     <Compile Include="Controllers\Application\ClientApplicatonController.cs" />
+    <Compile Include="Controllers\Awb\AdminAwbController.cs" />
     <Compile Include="Controllers\Awb\AwbFileController.cs" />
     <Compile Include="Controllers\CountryController.cs" />
     <Compile Include="Controllers\CityController.cs" />
@@ -310,6 +311,9 @@
     <Compile Include="Services\Log4NetWrapper.cs" />
     <Compile Include="Services\TransitService.cs" />
     <Compile Include="Services\Users\UserService.cs" />
+    <Compile Include="T4MVC\AdminAwbController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="T4MVC\AirWaybillController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
@@ -675,10 +679,10 @@
     <Content Include="Views\Application\EditorTemplates\ApplicationAdminModel.cshtml" />
     <Content Include="Views\ApplicationList\AdminTemplate.cshtml" />
     <Content Include="Views\ApplicationList\Tools.cshtml" />
-    <Content Include="Views\AirWaybill\Create.cshtml" />
-    <Content Include="Views\AirWaybill\EditorTemplates\AwbAdminModel.cshtml" />
+    <Content Include="Views\AdminAwb\Create.cshtml" />
+    <Content Include="Views\AdminAwb\EditorTemplates\AwbAdminModel.cshtml" />
     <Content Include="Views\AirWaybill\Index.cshtml" />
-    <Content Include="Views\AirWaybill\Edit.cshtml" />
+    <Content Include="Views\AdminAwb\Edit.cshtml" />
     <Content Include="Views\AirWaybill\AdminDetails.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\ApplicationList\AdminDetails.cshtml" />
