--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -55,12 +55,12 @@
     <Compile Include="Application\Abstract\IApplicationEventTemplates.cs" />
     <Compile Include="Client\Balance\BalanceLocalizedDataHelper.cs" />
     <Compile Include="Client\Balance\PaymentEventData.cs" />
-    <Compile Include="Client\ClientAdd\ClientExcelHelperStub.cs" />
+    <Compile Include="Client\ClientAdd\FileHelperStub.cs" />
     <Compile Include="Client\ClientAdd\CommonLocalizedDataHelper.cs" />
     <Compile Include="Client\IClientEventRecipientsFacade.cs" />
-    <Compile Include="Client\ClientEventMessageBuilder.cs" />
+    <Compile Include="Helpers\CommonEventMessageBuilder.cs" />
     <Compile Include="Client\ClientEventClientEventRecipientsFacade.cs" />
-    <Compile Include="Client\ILocalizedDataHelper.cs" />
+    <Compile Include="Helpers\Abstract\ILocalizedDataHelper.cs" />
     <Compile Include="Core\BreakJobException.cs" />
     <Compile Include="Core\SequentialEventJob.cs" />
     <Compile Include="Application\ApplicationStateHistoryProcessor.cs" />
