--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -53,9 +53,10 @@
       <Link>Properties\ProjectInfo.cs</Link>
     </Compile>
     <Compile Include="Application\Abstract\IApplicationEventTemplates.cs" />
+    <Compile Include="Awb\AwbLocalizedDataHelper.cs" />
     <Compile Include="Client\Balance\BalanceLocalizedDataHelper.cs" />
     <Compile Include="Client\Balance\PaymentEventData.cs" />
-    <Compile Include="Client\ClientAdd\FileHelperStub.cs" />
+    <Compile Include="Client\ClientAdd\ClientExcelHelperStub.cs" />
     <Compile Include="Client\ClientAdd\CommonLocalizedDataHelper.cs" />
     <Compile Include="Helpers\CommonEventMessageBuilder.cs" />
     <Compile Include="Client\ClientEventRecipientsFacade.cs" />
@@ -117,9 +118,7 @@
       <Name>Alicargo.Utilities</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Awb\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
