email on set awb

--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -53,10 +53,9 @@
       <Link>Properties\ProjectInfo.cs</Link>
     </Compile>
     <Compile Include="Application\Abstract\IApplicationEventTemplates.cs" />
-    <Compile Include="Awb\AwbLocalizedDataHelper.cs" />
     <Compile Include="Client\Balance\BalanceLocalizedDataHelper.cs" />
     <Compile Include="Client\Balance\PaymentEventData.cs" />
-    <Compile Include="Client\ClientAdd\ClientExcelHelperStub.cs" />
+    <Compile Include="Helpers\ClientExcelHelperStub.cs" />
     <Compile Include="Client\ClientAdd\CommonLocalizedDataHelper.cs" />
     <Compile Include="Helpers\CommonEventMessageBuilder.cs" />
     <Compile Include="Client\ClientEventRecipientsFacade.cs" />
