--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -277,7 +277,6 @@
     <Compile Include="Services\Abstract\IAwbPresenter.cs" />
     <Compile Include="Services\Abstract\IAdminCalculationPresenter.cs" />
     <Compile Include="Services\Abstract\IClientManager.cs" />
-    <Compile Include="Services\Abstract\IMessageBuilder.cs" />
     <Compile Include="Services\Abstract\ITransitService.cs" />
     <Compile Include="Services\Abstract\IUserService.cs" />
     <Compile Include="Services\AirWaybill\AwbUpdateGtdManager.cs" />
@@ -296,13 +295,12 @@
     <Compile Include="Services\Excel\Rows\ForwarderApplicationExcelRow.cs" />
     <Compile Include="Services\Excel\Rows\SenderApplicationExcelRow.cs" />
     <Compile Include="Services\AirWaybill\AwbUpdateManager.cs" />
-    <Compile Include="Services\Email\AwbUpdateManagerWithMailing.cs" />
+    <Compile Include="Services\AirWaybill\AwbUpdateManagerWithEvent.cs" />
     <Compile Include="Services\Application\AdminApplicationManager.cs" />
     <Compile Include="Services\Application\ApplicationPresenter.cs" />
     <Compile Include="Services\Application\ApplicationGrouper.cs" />
     <Compile Include="Services\AuthenticationService.cs" />
     <Compile Include="Services\Users\Client\ClientManager.cs" />
-    <Compile Include="Services\Email\MessageBuilder.cs" />
     <Compile Include="Services\IdentityService.cs" />
     <Compile Include="Services\AirWaybill\AwbPresenter.cs" />
     <Compile Include="Services\Log4NetWrapper.cs" />
