--- a/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
+++ b/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Contracts\Application\ApplicationExtendedData.cs" />
     <Compile Include="Contracts\EventDataForEntity.cs" />
     <Compile Include="Contracts\User\ClientBalanceHistoryItem.cs" />
+    <Compile Include="Contracts\User\EmailData.cs" />
     <Compile Include="Contracts\User\PasswordData.cs" />
     <Compile Include="Contracts\User\BrokerData.cs" />
     <Compile Include="Contracts\CalculationData.cs" />
