--- a/Alicargo.Core.Tests/Alicargo.Core.Tests.csproj
+++ b/Alicargo.Core.Tests/Alicargo.Core.Tests.csproj
@@ -82,6 +82,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Helpers\LocalizationHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <DependentUpon>Settings.settings</DependentUpon>
