--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -10,6 +10,7 @@
   <repository path="..\Alicargo.Jobs.Tests\packages.config" />
   <repository path="..\Alicargo.TestHelpers\packages.config" />
   <repository path="..\Alicargo.Tests\packages.config" />
+  <repository path="..\Alicargo.Utilities.Tests\packages.config" />
   <repository path="..\Alicargo.Utilities\packages.config" />
   <repository path="..\Alicargo\packages.config" />
 </repositories>
