--- a/Alicargo.BlackBox.Tests/app.config
+++ b/Alicargo.BlackBox.Tests/app.config
@@ -14,7 +14,7 @@
 		<add key="StateId-CargoReceived" value="11" />
 		<add key="CargoReceivedDaysToShow" value="10" />
 		<add key="StateId-CargoOnTransit" value="12" />
-
+		<add key="DefaultInsuranceRate" value="0.01" />
 		<add key="DefaultFrom" value="robot@alicargo.ru" />
 	</appSettings>
 	<connectionStrings>
@@ -56,7 +56,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-3.16.4.0" newVersion="3.16.4.0" />
+				<bindingRedirect oldVersion="0.0.0.0-3.16.5.0" newVersion="3.16.5.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
