edit InsuranceRate and InsuranceRateForClient

--- a/Alicargo/Web.Dev.config
+++ b/Alicargo/Web.Dev.config
@@ -3,18 +3,18 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 	<connectionStrings>
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="MainConnectionString"
-				 connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Dev;Integrated Security=True;"
-				 providerName="System.Data.SqlClient" />
+		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Dev;Integrated Security=True;"
+		     providerName="System.Data.SqlClient" />
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(name)"
-				 connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files_Dev;Integrated Security=True"
-				 name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
+		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files_Dev;Integrated Security=True"
+		     name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings>
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="JobPausePeriod" value="00:00:10" />
 	</appSettings>
 	<system.net>
 		<mailSettings xdt:Transform="Replace">
-			<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@alicargo.ru">
+			<smtp deliveryMethod="SpecifiedPickupDirectory" from="robot@alicargo.ru">
 				<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Alicargo.Dev\Mails" />
 			</smtp>
 			<!--<smtp deliveryMethod="Network" from="robot@alicargo.ru">
