--- a/Alicargo.Core/Alicargo.Core.csproj
+++ b/Alicargo.Core/Alicargo.Core.csproj
@@ -68,14 +68,14 @@
     <Compile Include="AirWaybill\AwbGtdHelper.cs" />
     <Compile Include="AirWaybill\AwbHelper.cs" />
     <Compile Include="AirWaybill\AwbManager.cs" />
-    <Compile Include="Calculation\CalculationDataDrawable.cs" />
+    <Compile Include="Excel\CalculationDataDrawable.cs" />
     <Compile Include="Calculation\CalculationHelper.cs" />
     <Compile Include="Calculation\CalculationService.cs" />
     <Compile Include="Calculation\CalculationServiceWithBalace.cs" />
     <Compile Include="Calculation\CalculationServiceWithEvent.cs" />
-    <Compile Include="Calculation\ClientBalanceHistoryItemDrawable.cs" />
-    <Compile Include="Calculation\DrawableMapper.cs" />
-    <Compile Include="Calculation\ExcelClientCalculation.cs" />
+    <Compile Include="Excel\ClientBalanceHistoryItemDrawable.cs" />
+    <Compile Include="Excel\DrawableMapper.cs" />
+    <Compile Include="Excel\ExcelClientCalculation.cs" />
     <Compile Include="Event\ApplicationEditorWithEvent.cs" />
     <Compile Include="Excel\ExcelConstants.cs" />
     <Compile Include="Helpers\ApplicationHelper.cs" />
