--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -22,7 +22,7 @@
 		<add key="JobPausePeriod" value="00:00:05" />
 	</appSettings>
 	<connectionStrings>
-		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" name="MainConnectionString" providerName="System.Data.SqlClient" />
+		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_2_3;Integrated Security=True" name="MainConnectionString" providerName="System.Data.SqlClient" />
 		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<system.net>
