--- a/Alicargo/Web.Release.config
+++ b/Alicargo/Web.Release.config
@@ -1,36 +1,40 @@
 ﻿<?xml version="1.0"?>
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <connectionStrings>
-    <add xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="MainConnectionString"
-				 connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_2_3;Integrated Security=True;"
-				 providerName="System.Data.SqlClient" />
-    <add xdt:Transform="SetAttributes" xdt:Locator="Match(name)"
-				 connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files_2_3;Integrated Security=True"
-				 name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
-  </connectionStrings>
-  <appSettings>
-    <add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="JobPausePeriod" value="00:00:30" />
-  </appSettings>
-  <system.net>
-    <mailSettings xdt:Transform="Replace">
-      <smtp deliveryMethod="Network" from="robot@alicargo.ru">
-        <network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
-      </smtp>
-    </mailSettings>
-  </system.net>
-  <system.webServer>
-    <rewrite xdt:Transform="Insert">
-      <rules>
-        <clear />
-        <rule name="login" enabled="true" stopProcessing="true">
-          <match url="^(.*)$" />
-          <action type="Redirect" url="http://alicargo.ru/authentication/login" appendQueryString="true" logRewrittenUrl="false" redirectType="Permanent" />
-          <conditions>
-            <add input="{HTTP_HOST}" pattern="^(login.)(alicargo.ru)$" />
-          </conditions>
-        </rule>
-      </rules>
-    </rewrite>
-  </system.webServer>
+	<connectionStrings>
+		<add xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="MainConnectionString"
+		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_2_3;Integrated Security=True;"
+		     providerName="System.Data.SqlClient" />
+		<add xdt:Transform="SetAttributes" xdt:Locator="Match(name)"
+		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files_2_3;Integrated Security=True"
+		     name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
+	</connectionStrings>
+	<appSettings>
+		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="JobPausePeriod" value="00:00:30" />
+	</appSettings>
+	<system.net>
+		<mailSettings xdt:Transform="Replace">
+			<smtp deliveryMethod="Network" from="robot@alicargo.ru">
+				<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
+			</smtp>
+			<!--<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@alicargo.ru">
+				<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Alicargo_2_3\Mails" />
+			</smtp>-->
+		</mailSettings>
+	</system.net>
+	<system.webServer>
+		<rewrite xdt:Transform="Insert">
+			<rules>
+				<clear />
+				<rule name="login" enabled="true" stopProcessing="true">
+					<match url="^(.*)$" />
+					<action type="Redirect" url="http://alicargo.ru/authentication/login" appendQueryString="true"
+					        logRewrittenUrl="false" redirectType="Permanent" />
+					<conditions>
+						<add input="{HTTP_HOST}" pattern="^(login.)(alicargo.ru)$" />
+					</conditions>
+				</rule>
+			</rules>
+		</rewrite>
+	</system.webServer>
 </configuration>
