--- a/Alicargo.Tests/App.config
+++ b/Alicargo.Tests/App.config
@@ -4,47 +4,47 @@
     that apply only to the Test project.
 -->
 <configuration>
-  <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="Alicargo.Tests.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-    </sectionGroup>
-  </configSections>
-  <appSettings>
-    <add key="DefaultFrom" value="noreply@timez.org" />
-    <add key="StateId-Default" value="1" />
-    <add key="StateId-CargoInStock" value="6" />
-    <add key="StateId-CargoIsFlew" value="7" />
-    <add key="StateId-CargoAtCustoms" value="8" />
-    <add key="StateId-CargoIsCustomsCleared" value="9" />
-    <add key="StateId-CargoReceived" value="11" />
-    <add key="StateId-CargoOnTransit" value="12" />
-  </appSettings>
-  <connectionStrings>
-    <add name="Alicargo.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True;Application Name=Alicargo.Tests" providerName="System.Data.SqlClient" />
-  </connectionStrings>
-  <system.net>
-    <mailSettings>
-      <smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
-        <specifiedPickupDirectory pickupDirectoryLocation="D:\S\Projects\Alicargo\Alicargo\Mails" />
-      </smtp>
-      <!--<smtp deliveryMethod="Network" from="robot@alicargo.ru">
-				<network host="smtp.gmail.com" enableSsl="true"	userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
+	<configSections>
+		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="Alicargo.Tests.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+		</sectionGroup>
+	</configSections>
+	<appSettings>
+		<add key="DefaultFrom" value="noreply@timez.org" />
+		<add key="StateId-Default" value="1" />
+		<add key="StateId-CargoInStock" value="6" />
+		<add key="StateId-CargoIsFlew" value="7" />
+		<add key="StateId-CargoAtCustoms" value="8" />
+		<add key="StateId-CargoIsCustomsCleared" value="9" />
+		<add key="StateId-CargoReceived" value="11" />
+		<add key="StateId-CargoOnTransit" value="12" />
+	</appSettings>
+	<connectionStrings>
+		<add name="Alicargo.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True;Application Name=Alicargo.Tests" providerName="System.Data.SqlClient" />
+	</connectionStrings>
+	<system.net>
+		<mailSettings>
+			<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
+				<specifiedPickupDirectory pickupDirectoryLocation="A:\Projects\Alicargo\Alicargo\Mails" />
+			</smtp>
+			<!--<smtp deliveryMethod="Network" from="robot@alicargo.ru">
+				<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587"/>
 			</smtp>-->
-    </mailSettings>
-  </system.net>
-  <userSettings>
-    <Alicargo.Tests.Properties.Settings>
-      <setting name="MailsFolder" serializeAs="String">
-        <value>D:\S\Projects\Alicargo\Alicargo\Mails</value>
-      </setting>
-    </Alicargo.Tests.Properties.Settings>
-  </userSettings>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-		<dependentAssembly>
-			<assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-4.2.1312.1622" newVersion="4.2.1312.1622" />
-		</dependentAssembly>		
-    </assemblyBinding>
-  </runtime>
+		</mailSettings>
+	</system.net>
+	<userSettings>
+		<Alicargo.Tests.Properties.Settings>
+			<setting name="MailsFolder" serializeAs="String">
+				<value>A:\Projects\Alicargo\Alicargo\Mails</value>
+			</setting>
+		</Alicargo.Tests.Properties.Settings>
+	</userSettings>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.2.1312.1622" newVersion="4.2.1312.1622" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
 </configuration>
