--- a/Alicargo.Core.Contracts/Alicargo.Core.Contracts.csproj
+++ b/Alicargo.Core.Contracts/Alicargo.Core.Contracts.csproj
@@ -53,7 +53,7 @@
     </Compile>
     <Compile Include="AirWaybill\IApplicationAwbManager.cs" />
     <Compile Include="AirWaybill\IAwbManager.cs" />
-    <Compile Include="AirWaybill\IAwbStateManager.cs" />
+    <Compile Include="State\IAwbStateManager.cs" />
     <Compile Include="Calculation\ICalculationService.cs" />
     <Compile Include="Calculation\IExcelClientCalculation.cs" />
     <Compile Include="Client\IClientBalance.cs" />
@@ -68,6 +68,7 @@
     <Compile Include="Excel\IExcelGenerator.cs" />
     <Compile Include="Common\ILog.cs" />
     <Compile Include="Email\IMailSender.cs" />
+    <Compile Include="State\IApplicationStateManager.cs" />
     <Compile Include="State\IStateConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State\IStateFilter.cs" />
