--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -58,7 +58,6 @@
     <Compile Include="Client\Balance\PaymentEventData.cs" />
     <Compile Include="Awb\AwbEventLocalizedDataHelper.cs" />
     <Compile Include="Helpers\Abstract\ICommonFilesFacade.cs" />
-    <Compile Include="Helpers\ClientExcelHelperStub.cs" />
     <Compile Include="Client\ClientAdd\CommonLocalizedDataHelper.cs" />
     <Compile Include="Helpers\CommonEventMessageBuilder.cs" />
     <Compile Include="Client\ClientEventRecipientsFacade.cs" />
@@ -72,7 +71,7 @@
     <Compile Include="Helpers\Abstract\IRecipientsFacade.cs" />
     <Compile Include="Helpers\Abstract\ITemplateRepositoryHelper.cs" />
     <Compile Include="Application\Abstract\ITextBuilder.cs" />
-    <Compile Include="Application\Helpers\MessageBuilder.cs" />
+    <Compile Include="Application\Helpers\ApplicationMessageBuilder.cs" />
     <Compile Include="Application\Helpers\ApplicationEventRecipientsFacade.cs" />
     <Compile Include="Helpers\Abstract\ITextBuilder.cs" />
     <Compile Include="Helpers\ClientExcelHelper.cs" />
